HW5 completed css

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "it-incubator-homeworks",
+  "name": "ignathomeworks",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://msaserj.github.io/it-incubator-hw-ignat",
