--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.4",
     "gh-pages": "^4.0.0",
+    "rc-slider": "^10.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
